perf: make workspace bindings incremental by file