@@ -31,15 +31,18 @@ public final class WorkspaceBindings implements AutoCloseable {
     private static <K> Map<K,List<Integer>> frozen(Map<K,List<Integer>> values){
         var result=new LinkedHashMap<K,List<Integer>>();values.forEach((key,list)->result.put(key,List.copyOf(list)));return Collections.unmodifiableMap(result);
     }
-    private record Inputs(String generation,Map<Path,String> hashes,List<Path> files,List<Path> classpath) { }
+    private record Inputs(String generation,Map<Path,String> sourceHashes,Map<Path,String> classpathHashes,List<Path> files,List<Path> classpath) { }
+    private record Fragment(String hash,CompilerPool.Outcome<Bindings.Snapshot> outcome,String apiFingerprint) { }
     private record Stamp(Map<String,Object> attributes,String hash) { }
     private final LinkedHashMap<Path,Stamp> hashes=new LinkedHashMap<>(256,.75f,true);
+    private final LinkedHashMap<Path,Fragment> fragments=new LinkedHashMap<>();
     private final FileStateRegistry classpathFiles;
     public WorkspaceBindings(){this(new FileStateRegistry());}
     public WorkspaceBindings(FileStateRegistry classpathFiles){this.classpathFiles=Objects.requireNonNull(classpathFiles);}
     private Inputs inputs;
     private Snapshot snapshot;
-    private long hits,builds,serializedBytes;
+    private long hits,builds,serializedBytes,fullBuilds,incrementalBuilds,filesReanalysed,filesReused,apiInvalidations;
+    private int lastReanalysedFiles;
     private String hash(Path file)throws Exception {
         Map<String,Object> attributes=null;
         try{
@@ -55,18 +58,27 @@ public final class WorkspaceBindings implements AutoCloseable {
         return value;
     }
     private Inputs inputs(List<Path> files,List<Path> classpath,Documents documents,String generation)throws Exception {
-        var values=new LinkedHashMap<Path,String>();
-        for(Path file:files){String memory=documents.hash(file);values.put(file,memory==null?hash(file):memory);}
-        for(Path path:classpath){
+        var normalizedFiles=files.stream().map(path->path.toAbsolutePath().normalize()).distinct().toList();
+        var sourceValues=new LinkedHashMap<Path,String>();
+        for(Path file:normalizedFiles){String memory=documents.hash(file);sourceValues.put(file,memory==null?hash(file):memory);}
+        var classpathValues=new LinkedHashMap<Path,String>();var normalizedClasspath=new ArrayList<Path>();
+        for(Path raw:classpath){
+            Path path=raw.toAbsolutePath().normalize();normalizedClasspath.add(path);
             if(Files.isDirectory(path))try(var children=Files.find(path,Integer.MAX_VALUE,(file,attributes)->(file.toString().endsWith(".class")||file.toString().endsWith(".jar"))&&(attributes.isRegularFile()||attributes.isSymbolicLink()&&Files.isRegularFile(file)))){
-                for(Path file:children.sorted().toList())values.put(file,classpathFiles.hash(file));
-            }else values.put(path,classpathFiles.hash(path));
+                for(Path file:children.sorted().toList())classpathValues.put(file.toAbsolutePath().normalize(),classpathFiles.hash(file));
+            }else classpathValues.put(path,classpathFiles.hash(path));
         }
-        return new Inputs(generation,Map.copyOf(values),List.copyOf(files),List.copyOf(classpath));
+        return new Inputs(generation,Map.copyOf(sourceValues),Map.copyOf(classpathValues),List.copyOf(normalizedFiles),List.copyOf(normalizedClasspath));
+    }
+    private static boolean sameContext(Inputs first,Inputs second){
+        return first!=null&&second!=null&&Objects.equals(first.generation(),second.generation())
+                &&first.classpathHashes().equals(second.classpathHashes())
+                &&first.sourceHashes().keySet().equals(second.sourceHashes().keySet());
     }
     public Snapshot peek(List<Path> files,List<Path> classpath,Documents documents,String generation)throws Exception {
         if(snapshot==null)return null;
-        if(!inputs.equals(inputs(files,classpath,documents,generation))){snapshot=null;inputs=null;serializedBytes=0;return null;}
+        var current=inputs(files,classpath,documents,generation);
+        if(!current.equals(inputs)){snapshot=null;serializedBytes=0;return null;}
         hits++;return snapshot;
     }
     public Snapshot get(SourceFiles sources,List<Path> classpath,Documents documents,String generation,long byteBudget,Loader loader)throws Exception {
@@ -76,38 +88,115 @@ public final class WorkspaceBindings implements AutoCloseable {
             return results;
         });
     }
-    public Snapshot getBatch(SourceFiles sources,List<Path> classpath,Documents documents,String generation,long byteBudget,BatchLoader loader)throws Exception {
-        var files=sources.files();var current=inputs(files,classpath,documents,generation);
-        if(snapshot!=null&&current.equals(inputs)){hits++;return snapshot;}
-        snapshot=null;inputs=null;serializedBytes=0;builds++;
+    private static String api(Path file,CompilerPool.Outcome<Bindings.Snapshot> outcome){
+        return outcome!=null&&outcome.result()!=null?ApiFingerprint.of(outcome.result(),file):"";
+    }
+    private static boolean hasErrors(Fragment fragment){
+        return fragment!=null&&fragment.outcome().diagnostics().stream().anyMatch(problem->problem.kind().equals("ERROR"));
+    }
+    private static Set<Path> reverseClosure(Map<Path,Fragment> prior,Set<Path> roots,Set<Path> currentFiles){
+        var reverse=new HashMap<Path,Set<Path>>();
+        for(var entry:prior.entrySet()){
+            var outcome=entry.getValue().outcome();if(outcome==null||outcome.result()==null)continue;
+            for(Path dependency:outcome.result().dependencies()){
+                Path normalized=dependency.toAbsolutePath().normalize();
+                if(!normalized.equals(entry.getKey()))reverse.computeIfAbsent(normalized,ignored->new LinkedHashSet<>()).add(entry.getKey());
+            }
+        }
+        var selected=new LinkedHashSet<Path>();var queue=new ArrayDeque<Path>();
+        roots.forEach(path->queue.add(path.toAbsolutePath().normalize()));
+        // API additions can resolve a previously unresolved symbol with no old dependency edge.
+        for(var entry:prior.entrySet())if(hasErrors(entry.getValue())&&currentFiles.contains(entry.getKey()))queue.add(entry.getKey());
+        while(!queue.isEmpty()){
+            Path changed=queue.removeFirst();
+            for(Path dependant:reverse.getOrDefault(changed,Set.of()))if(currentFiles.contains(dependant)&&selected.add(dependant))queue.addLast(dependant);
+        }
+        selected.removeAll(roots);return selected;
+    }
+    private Map<Path,Fragment> load(Set<Path> files,Inputs current,Documents documents,BatchLoader loader)throws Exception{
+        if(files.isEmpty())return Map.of();
+        var texts=new LinkedHashMap<Path,String>();
+        for(Path file:current.files())if(files.contains(file))texts.put(file,documents.text(file));
+        var loaded=loader.load(Collections.unmodifiableMap(texts));
+        var result=new LinkedHashMap<Path,Fragment>();
+        for(Path file:texts.keySet()){
+            var outcome=Objects.requireNonNull(loaded.get(file),"Missing file in binding batch: "+file);
+            result.put(file,new Fragment(current.sourceHashes().get(file),outcome,api(file,outcome)));
+        }
+        return result;
+    }
+    private Snapshot aggregate(Inputs current,Map<Path,Fragment> values,boolean consistent)throws Exception{
         var symbols=new LinkedHashMap<String,Map<String,Object>>();var declarations=new LinkedHashMap<String,Map<String,Object>>();
         var edges=new LinkedHashSet<Bindings.Edge>();var occurrences=new ArrayList<Bindings.Occurrence>();
         var diagnostics=new ArrayList<CompilerPool.Problem>();var warnings=new LinkedHashSet<String>();int tier=2;
-        var texts=new LinkedHashMap<Path,String>();for(Path file:files)texts.put(file,documents.text(file));
-        var loaded=loader.load(Collections.unmodifiableMap(texts));
-        for(Path file:files){
-            var result=Objects.requireNonNull(loaded.get(file),"Missing file in binding batch: "+file);tier=Math.min(tier,result.tier());warnings.addAll(result.warnings());diagnostics.addAll(result.diagnostics());
-            if(result.result()==null){tier=Math.min(tier,1);warnings.add("incomplete_workspace_bindings: "+file);continue;}
-            var graph=result.result();symbols.putAll(graph.symbols());edges.addAll(graph.edges());occurrences.addAll(graph.occurrences());
-            for(var occurrence:graph.occurrences())if(occurrence.role().equals("declaration")&&Path.of(occurrence.file()).equals(file)){
+        for(Path file:current.files()){
+            var fragment=values.get(file);
+            if(fragment==null){tier=Math.min(tier,1);warnings.add("incomplete_workspace_bindings: "+file);continue;}
+            var outcome=fragment.outcome();tier=Math.min(tier,outcome.tier());warnings.addAll(outcome.warnings());diagnostics.addAll(outcome.diagnostics());
+            if(outcome.result()==null){tier=Math.min(tier,1);warnings.add("incomplete_workspace_bindings: "+file);continue;}
+            var graph=outcome.result();symbols.putAll(graph.symbols());edges.addAll(graph.edges());occurrences.addAll(graph.occurrences());
+            for(var occurrence:graph.occurrences())if(occurrence.role().equals("declaration")&&Path.of(occurrence.file()).toAbsolutePath().normalize().equals(file)){
                 var symbol=graph.symbols().get(occurrence.scip());
                 if(symbol!=null&&!Set.of("local_variable","parameter","exception_parameter","binding_variable","resource_variable","type_parameter").contains(symbol.get("kind")))declarations.put(occurrence.scip(),symbol);
             }
         }
-        if(!current.equals(inputs(sources.files(),classpath,documents,generation))){warnings.add("workspace_changed_during_query: retry for a consistent graph");tier=Math.min(tier,1);}
-        // A declaration keeps its complete source metadata over later binary or implicit references.
+        if(!consistent){warnings.add("workspace_changed_during_query: retry for a consistent graph");tier=Math.min(tier,1);}
         symbols.putAll(declarations);
         var edgeList=List.copyOf(edges);var outgoing=new LinkedHashMap<String,List<Integer>>();var incoming=new LinkedHashMap<String,List<Integer>>();
-        for(int i=0;i<edgeList.size();i++){var edge=edgeList.get(i);outgoing.computeIfAbsent(edge.src(),k->new ArrayList<>()).add(i);incoming.computeIfAbsent(edge.dst(),k->new ArrayList<>()).add(i);}
+        for(int index=0;index<edgeList.size();index++){var edge=edgeList.get(index);outgoing.computeIfAbsent(edge.src(),key->new ArrayList<>()).add(index);incoming.computeIfAbsent(edge.dst(),key->new ArrayList<>()).add(index);}
         var edgeOccurrences=new LinkedHashMap<Bindings.Edge,List<Integer>>();
-        for(int i=0;i<occurrences.size();i++){var occurrence=occurrences.get(i);if(occurrence.container()!=null)edgeOccurrences.computeIfAbsent(new Bindings.Edge(occurrence.container(),occurrence.scip(),occurrence.role()),k->new ArrayList<>()).add(i);}
-        var result=new Snapshot(Collections.unmodifiableMap(symbols),Collections.unmodifiableMap(declarations),edgeList,List.copyOf(occurrences),List.copyOf(diagnostics),tier,List.copyOf(warnings),frozen(outgoing),frozen(incoming),frozen(edgeOccurrences));
-        if(tier==2&&warnings.stream().noneMatch(w->w.startsWith("analyzer_fault"))){
-            long size=Json.MAPPER.writeValueAsBytes(result).length;
-            if(size+96L*edgeList.size()+40L*occurrences.size()<=Math.min(128L*1024*1024,Math.max(0,byteBudget))){snapshot=result;inputs=current;serializedBytes=size;}
+        for(int index=0;index<occurrences.size();index++){var occurrence=occurrences.get(index);if(occurrence.container()!=null)edgeOccurrences.computeIfAbsent(new Bindings.Edge(occurrence.container(),occurrence.scip(),occurrence.role()),key->new ArrayList<>()).add(index);}
+        return new Snapshot(Collections.unmodifiableMap(symbols),Collections.unmodifiableMap(declarations),edgeList,List.copyOf(occurrences),List.copyOf(diagnostics),tier,List.copyOf(warnings),frozen(outgoing),frozen(incoming),frozen(edgeOccurrences));
+    }
+    public Snapshot getBatch(SourceFiles sources,List<Path> classpath,Documents documents,String generation,long byteBudget,BatchLoader loader)throws Exception {
+        var current=inputs(sources.files(),classpath,documents,generation);
+        if(snapshot!=null&&current.equals(inputs)){hits++;lastReanalysedFiles=0;filesReused+=current.files().size();return snapshot;}
+
+        var priorInputs=inputs;var priorFragments=new LinkedHashMap<>(fragments);
+        boolean full=!sameContext(priorInputs,current)||priorFragments.size()!=current.files().size();
+        var dirty=new LinkedHashSet<Path>();
+        if(full)dirty.addAll(current.files());
+        else for(Path file:current.files())if(!Objects.equals(priorInputs.sourceHashes().get(file),current.sourceHashes().get(file)))dirty.add(file);
+
+        builds++;snapshot=null;serializedBytes=0;
+        if(full){fullBuilds++;fragments.clear();priorFragments.clear();}
+        else incrementalBuilds++;
+
+        var working=new LinkedHashMap<Path,Fragment>(priorFragments);
+        var first=load(dirty,current,documents,loader);working.putAll(first);
+        var apiChanged=new LinkedHashSet<Path>();
+        if(!full)for(Path file:dirty){
+            var before=priorFragments.get(file),after=first.get(file);
+            if(before==null||after==null||!Objects.equals(before.apiFingerprint(),after.apiFingerprint()))apiChanged.add(file);
         }
+        if(!apiChanged.isEmpty()){
+            apiInvalidations+=apiChanged.size();
+            var dependants=reverseClosure(priorFragments,apiChanged,new LinkedHashSet<>(current.files()));
+            dependants.removeAll(dirty);
+            if(!dependants.isEmpty())working.putAll(load(dependants,current,documents,loader));
+            dirty.addAll(dependants);
+        }
+
+        lastReanalysedFiles=dirty.size();filesReanalysed+=dirty.size();filesReused+=Math.max(0,current.files().size()-dirty.size());
+        var after=inputs(sources.files(),classpath,documents,generation);boolean consistent=current.equals(after);
+        var result=aggregate(current,working,consistent);
+        if(consistent&&result.tier()==2&&result.warnings().stream().noneMatch(w->w.startsWith("analyzer_fault"))){
+            long size=Json.MAPPER.writeValueAsBytes(result).length;
+            long estimated=Math.multiplyExact(size,2L)+96L*result.edges().size()+40L*result.occurrences().size();
+            if(estimated<=Math.min(128L*1024*1024,Math.max(0,byteBudget))){
+                snapshot=result;inputs=current;fragments.clear();fragments.putAll(working);serializedBytes=size;
+            }else{inputs=null;fragments.clear();}
+        }else{inputs=null;fragments.clear();}
         return result;
     }
-    public Map<String,Object> status(){return Map.of("builds",builds,"cache_hits",hits,"serialized_bytes",serializedBytes,"cached_files",inputs==null?0:inputs.files().size());}
-    @Override public void close(){snapshot=null;inputs=null;hashes.clear();serializedBytes=0;}
+    public Map<String,Object> status(){
+        var result=new LinkedHashMap<String,Object>();
+        result.put("builds",builds);result.put("cache_hits",hits);result.put("serialized_bytes",serializedBytes);
+        result.put("cached_files",inputs==null?0:inputs.files().size());result.put("fragment_files",fragments.size());
+        result.put("full_builds",fullBuilds);result.put("incremental_builds",incrementalBuilds);
+        result.put("files_reanalysed",filesReanalysed);result.put("files_reused",filesReused);
+        result.put("last_reanalysed_files",lastReanalysedFiles);result.put("api_invalidations",apiInvalidations);
+        return Collections.unmodifiableMap(result);
+    }
+    @Override public void close(){snapshot=null;inputs=null;fragments.clear();hashes.clear();serializedBytes=0;}
 }
